--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "number-precision": "^1.6.0",
     "nuxt": "^2.15.8",
+    "nuxt-i18n": "^6.28.1",
     "vue": "^2.7.10",
     "vue-ls": "^4.2.0",
     "vue-server-renderer": "^2.7.10",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
     "less": "^4.1.3",
-    "less-loader": "^7.3.0"
+    "less-loader": "^7.3.0",
+    "nuxt-windicss": "^2.6.1"
   }
 }
